fixed some visibility stuff

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -34,7 +34,7 @@
 }
 
 .home__social-link {
-    color: var(--title-color);
+    color: white;
     font-size: 1.5rem;
     transition: 0.3s;
 }
@@ -51,11 +51,11 @@
 }
 
 .home__scroll-name {
-    font-size: var(--small-font-size);
+    color: white;
 }
 
 .mouse {
-    border: 2px solid #454360;
+    border: 2px solid white;
     display: block;
     height: 1.6rem;
     width: 1.25rem;
@@ -81,7 +81,7 @@
 }
 
 .wheel {
-    background-color: #454360;
+    background-color: white;
     border-radius: 100%;
     width: 0.25rem;
     height: 0.25rem;
