--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -37,6 +37,7 @@
 .services__title {
     font-size: 1.5rem;
     margin-bottom: 0.5rem;
+    color: black;
 }
 
 .services__description {
